fixes z-index

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -59,7 +59,7 @@ main {
 .backdrop {
   display: flex;
   position: fixed;
-  z-index: 100000;
+  z-index: 21;
   width: 100%;
   height: 100%;
   overflow-y: auto;
