--- a/src/sass/_preloader.scss
+++ b/src/sass/_preloader.scss
@@ -1,7 +1,7 @@
 .preloader-backdrop {
   position: sticky;
   top: 0;
-  z-index: 90000;
+  z-index: 17;
   width: 100%;
   height: 100%;
   background-color: #f5f6fb;
